Fix chef animation (overflow)

--- a/src/components/main/main-header.css
+++ b/src/components/main/main-header.css
@@ -1,8 +1,9 @@
 .main-header {
-  height: 10vh;
+  height: 80px;
   width: 100vw;
   display: flex;
   justify-content: center;
+  margin-top: 1vh;
 }
 
 .main-header-logo {
